Wrapping the newly formatted errors from search API, Quick break for server updates so addressing other bugs

--- a/src/src/App.css
+++ b/src/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App.blur-true{
-  blur: 8px;
+  filter: blur(4px);
 }
 
 .tooltip 
